cluster/core/infrastructure/longhorn-system/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: longhorn-ui
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/auth-url: "http://authelia.networking.svc.cluster.local/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://login.${SECRET_CLUSTER_DOMAIN_CERT}/"
spec:
  tls:
    - hosts:
        - longhorn.${SECRET_CLUSTER_DOMAIN}
  rules:
    - host: longhorn.${SECRET_CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
